manifests/cors-proxy/cors-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cors-proxy
  namespace: cors-proxy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: web
  selector:
    app: cors-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cors-proxy
  namespace: cors-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cors-proxy
  template:
    metadata:
      labels:
        app: cors-proxy
    spec:
      containers:
      - name: web
        image: rg.fr-par.scw.cloud/averagemarcus/cors-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: web
        resources:
          requests:
            memory: 184M
          limits:
            memory: 184M
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cors-proxy
  namespace: cors-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cors-proxy.cluster.fun
    - cors-proxy.marcusnoble.co.uk
    secretName: cors-proxy-ingress
  rules:
  - host: cors-proxy.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cors-proxy
            port:
              number: 80
  - host: cors-proxy.marcusnoble.co.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cors-proxy
            port:
              number: 80
